--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 	<div class="container">
-		home
+		<p class="text-center"><img src="/assets/img/home_main.jpg" /></p>
 	</div>
 {% endblock %}
